--- a/templates/bartender/ingredient_needed/create_ingredient_needed.html
+++ b/templates/bartender/ingredient_needed/create_ingredient_needed.html
@@ -3,54 +3,55 @@
 
 {% block content %}
   <div class="row">
-    <div class="card col-lg-7 col-12 mx-auto">
-      <div class="card-body">
-        <form method="post" class="form-horizontal" id="userCreationForm" enctype="multipart/form-data">
-          {{ formset.management_form }}
-          {% csrf_token %}
-          {{ form.id }}
+    <div class="col-lg-7 col-12 mx-auto">
+      <div class="card">
+        <div class="card-body">
+          <form method="post" class="form-horizontal" id="userCreationForm" enctype="multipart/form-data">
+            {{ formset.management_form }}
+            {% csrf_token %}
+            {{ form.id }}
 
-          {% for field in form %}
-            <div class="row">
-              <div class="col-lg-4 col-5 h5 text-right">
-                <label class="col-form-label">
-                  {{ field.label }}
-                  {% if field.field.required %}
-                    <span class="required">*</span>
+            {% for field in form %}
+              <div class="row">
+                <div class="col-lg-4 col-5 h5 text-right">
+                  <label class="col-form-label">
+                    {{ field.label }}
+                    {% if field.field.required %}
+                      <span class="required">*</span>
+                    {% endif %}
+                  </label>
+                </div>
+                <div class="col-lg-8 col-7">
+                  {% if field.name == "drink" and drink %}
+                    <input type="hidden" id="id_drink" name="drink" value="{{ drink.id }}">
+                    <p class="form-control">{{ drink }}</p>
+                  {% else %}
+                    {{ field }}
                   {% endif %}
-                </label>
-              </div>
-              <div class="col-lg-8 col-7">
-                {% if field.name == "drink" and drink %}
-                  <input type="hidden" id="id_drink" name="drink" value="{{ drink.id }}">
-                  <p class="form-control">{{ drink }}</p>
-                {% else %}
-                  {{ field }}
-                {% endif %}
 
-                <small id="{{ field.text }}help" class="form-text text-muted">{{ field.help_text }}</small>
-                {% for error in field.errors %}
-                  <div class="alert alert-warning alert-dismissible fade show mt-1 mb-1" role="alert">
-                    {{ error }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                  </div>
-                {% endfor %}
+                  <small id="{{ field.text }}help" class="form-text text-muted">{{ field.help_text }}</small>
+                  {% for error in field.errors %}
+                    <div class="alert alert-warning alert-dismissible fade show mt-1 mb-1" role="alert">
+                      {{ error }}
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                  {% endfor %}
+                </div>
+              </div>
+            {% endfor %}
+
+            <div class="row">
+              <div class="col-lg-6 col-8">
+                <a class="btn btn-secondary btn-round" href="{% url 'bartender:detail_drink' drink.id %}">Wróć do
+                  szczegółów</a>
+              </div>
+              <div class="col-lg-6 col-4 text-right">
+                <button class="btn btn-outline-success btn-round" type="submit">Zapisz</button>
               </div>
             </div>
-          {% endfor %}
-
-          <div class="row">
-            <div class="col-lg-6 col-8">
-              <a class="btn btn-secondary btn-round" href="{% url 'bartender:detail_drink' drink.id %}">Wróć do
-                szczegółów</a>
-            </div>
-            <div class="col-lg-6 col-4 text-right">
-              <button class="btn btn-outline-success btn-round" type="submit">Zapisz</button>
-            </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
-
   </div>
 {% endblock %}
