--- a/templates/bartender/drink/update_drink.html
+++ b/templates/bartender/drink/update_drink.html
@@ -4,62 +4,65 @@
 
 {% block content %}
   <div class="row">
-    <div class="card col-lg-7 col-12 mx-auto">
-      <div class="card-body">
+    <div class="col-lg-7 col-12 mx-auto">
+      <div class="card">
+        <div class="card-body">
 
-        <form method="post" class="form-horizontal" id="userCreationForm" enctype="multipart/form-data">
-          {{ formset.management_form }}
-          {% csrf_token %}
-          {{ form.id }}
-          <div class="row pb-3">
-            <div class="col text-center core_image_frame">
-              {% if form.image.value %}
-                <img class="card-img-top core_image_sizes" src="{{ form.image.value.url }}" alt="{{ form.image.name }}">
-              {% else %}
-                <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}"
-                     alt="No image available">
-              {% endif %}
+          <form method="post" class="form-horizontal" id="userCreationForm" enctype="multipart/form-data">
+            {{ formset.management_form }}
+            {% csrf_token %}
+            {{ form.id }}
+            <div class="row pb-3">
+              <div class="col text-center core_image_frame">
+                {% if form.image.value %}
+                  <img class="card-img-top core_image_sizes" src="{{ form.image.value.url }}"
+                       alt="{{ form.image.name }}">
+                {% else %}
+                  <img class="card-img-top core_image_sizes" src="{% static 'img/no-image-available.jpg' %}"
+                       alt="No image available">
+                {% endif %}
+              </div>
             </div>
-          </div>
-          {% for field in form %}
+            {% for field in form %}
+              <div class="row py-1">
+                <div class="col-lg-4 col-5 my-auto h5 text-right">
+                  <label class="col-form-labell">
+                    {{ field.label }}
+                    {% if field.field.required %}
+                      <span class="required">*</span>
+                    {% endif %}
+                  </label>
+                </div>
+                <div class="col-lg-8 col-7 my-auto">
+                  {{ field }}
+                  <small id="{{ field.text }}help" class="form-text text-muted">{{ field.help_text }}</small>
+                  {% for error in field.errors %}
+                    <div class="alert alert-warning alert-dismissible fade show mt-1 mb-1" role="alert">
+                      {{ error }}
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                  {% endfor %}
+                </div>
+              </div>
+            {% endfor %}
+
             <div class="row">
-              <div class="col-lg-4 col-5 my-auto h5 text-right">
-                <label class="col-form-labell">
-                  {{ field.label }}
-                  {% if field.field.required %}
-                    <span class="required">*</span>
-                  {% endif %}
-                </label>
+              <div class="col-lg-6 col-12 text-center">
+                <a class="btn btn-secondary btn-round" href="{% url 'bartender:detail_drink' form.instance.id %}">Wróć
+                  do
+                  szczegółów</a>
               </div>
-              <div class="col-lg-8 col-7 my-auto">
-                {{ field }}
-                <small id="{{ field.text }}help" class="form-text text-muted">{{ field.help_text }}</small>
-                {% for error in field.errors %}
-                  <div class="alert alert-warning alert-dismissible fade show mt-1 mb-1" role="alert">
-                    {{ error }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                  </div>
-                {% endfor %}
+              <div class="col-lg-3 col-6 text-center text-right">
+                <a class="btn btn-outline-danger btn-round"
+                   href="{% url 'bartender:delete_drink' form.instance.id %}">Usuń</a>
+              </div>
+              <div class="col-lg-3 col-6 text-center text-right">
+                <button class="btn btn-outline-success btn-round" type="submit">Zapisz</button>
               </div>
             </div>
-          {% endfor %}
-
-          <div class="row">
-            <div class="col-lg-6 col-12 text-center">
-              <a class="btn btn-secondary btn-round" href="{% url 'bartender:detail_drink' form.instance.id %}">Wróć do
-                szczegółów</a>
-            </div>
-            <div class="col-lg-3 col-6 text-center text-right">
-              <a class="btn btn-outline-danger btn-round"
-                 href="{% url 'bartender:delete_drink' form.instance.id %}">Usuń</a>
-            </div>
-            <div class="col-lg-3 col-6 text-center text-right">
-              <button class="btn btn-outline-success btn-round" type="submit">Zapisz</button>
-            </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
-
   </div>
 {% endblock %}
