--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -84,7 +84,7 @@
         document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
     </script>
     Created by
-    <a href="https://oskarmay.pl" target="_blank">Oskarmay</a>
+    <a href="https://github.com/oskarmay/Bartender_Assistant" target="_blank">Oskarmay</a>
   </div>
   <!-- Copyright -->
 </footer>
