--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -15,10 +15,10 @@
 {% block content %}
   {% include "core/baner.html" %}
   <div class="row">
-    <h4>Czym jest System Wspomagania Barmana</h4>
-    <p>
-      Jest to system napisany w ramach pracy dyplomowej 1 stopnia. Ma za zadanie usprawnić proces realizacji zamówień w
-      barach.
-    </p>
+{#    <h4>Czym jest System Wspomagania Barmana</h4>#}
+{#    <p>#}
+{#      Jest to system napisany w ramach pracy dyplomowej 1 stopnia. Ma za zadanie usprawnić proces realizacji zamówień w#}
+{#      barach.#}
+{#    </p>#}
   </div>
 {% endblock %}
