update django; creating dummy view and template for earns; configure translations; template better ux;

--- a/templates/bartender/base.html
+++ b/templates/bartender/base.html
@@ -25,7 +25,7 @@
         <a class="dropdown-item" href="{% url 'bartender:history_orders_list' %}">Historia zamówień</a>
         <a class="dropdown-item" href="{% url 'bartender:customer_list' %}">Lista Klientów</a>
         <a class="dropdown-item" href="{% url 'bartender:drink_suggestions_random' %}">Propozycja losowego drinku</a>
-        <a class="dropdown-item" href="#">Statystyki</a>
+        <a class="dropdown-item" href="{% url 'bartender:earns' %}">Statystyki</a>
       </div>
     </div>
   </li>
