--- a/templates/bartender/drink/list_drink.html
+++ b/templates/bartender/drink/list_drink.html
@@ -8,9 +8,9 @@
       <a class="btn btn-primary" href="{% url 'bartender:create_drink' %}">DODAJ</a>
     </div>
   </div>
-  <div class="row">
-    <p>Tutaj jakieś Filtry w planiea</p>
-  </div>
+{#  <div class="row">#}
+{#    <p>Tutaj jakieś Filtry w planiea</p>#}
+{#  </div>#}
   <div class="row">
     {% for drink in drinks %}
       <div class="col-12 col-lg-4 d-flex align-items-stretch">
