--- a/templates/bartender/home.html
+++ b/templates/bartender/home.html
@@ -110,7 +110,7 @@
     </div>
     <div class="col-lg-4 col-12 my-2">
       <div class="card h-100">
-        <a href="{% url 'bartender:home' %}" class="dashboard_text stretched-link">
+        <a href="{% url 'bartender:earns' %}" class="dashboard_text stretched-link">
           <div class="card-body">
             <div class="card-title text-center">Statystyki</div>
             <div class="card-text text-center">
