--- a/templates/bartender/storage/list_ingredient.html
+++ b/templates/bartender/storage/list_ingredient.html
@@ -8,9 +8,9 @@
       <a class="btn btn-primary" href="{% url 'bartender:create_ingredient' %}">DODAJ</a>
     </div>
   </div>
-  <div class="row">
-    <p>Tutaj jakieś Filtry w planie</p>
-  </div>
+{#  <div class="row">#}
+{#    <p>Tutaj jakieś Filtry w planie</p>#}
+{#  </div>#}
   <div class="row">
     {% for ingredient in storage_ingredients %}
       <div class="col-6 col-lg-3 d-flex align-items-stretch">
