--- a/templates/core/change_password.html
+++ b/templates/core/change_password.html
@@ -42,7 +42,7 @@
                 </div>
               {% endfor %}
               <div class="row justify-content-center">
-                <button class="btn btn-success btn-round">Zmień hasło</button>
+                <button class="btn btn-outline-success btn-round">Zmień hasło</button>
               </div>
             </form>
           </div>
