--- a/templates/customer/orders/list_order.html
+++ b/templates/customer/orders/list_order.html
@@ -4,9 +4,9 @@
 
 
 {% block content %}
-  <div class="row">
-    <p>Tutaj jakieś Filtry w planie</p>
-  </div>
+{#  <div class="row">#}
+{#    <p>Tutaj jakieś Filtry w planie</p>#}
+{#  </div>#}
 
   {# Drinki #}
   <div class="row justify-content-center"><h3>Drinki</h3></div>
