--- a/templates/customer/orders/list_ordered.html
+++ b/templates/customer/orders/list_ordered.html
@@ -4,9 +4,9 @@
 
 
 {% block content %}
-  <div class="row">
-    <p>Tutaj jakieś Filtry w planie</p>
-  </div>
+{#  <div class="row">#}
+{#    <p>Tutaj jakieś Filtry w planie</p>#}
+{#  </div>#}
   <div class="row justify-content-center"><h3>Drinki</h3></div>
   <div class="row">
     {% for order_drink in orders %}
